fix: button align center and wrap issues fixed

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -157,12 +157,13 @@ header {
     font-weight: 400;
     line-height: 35.14px;
     margin:5px;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px 5px 20px;
     z-index: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    white-space: nowrap;
 }
 
 .header-button:hover {
@@ -217,7 +218,7 @@ header {
     line-height: 34.15px;
     margin:5px;
     background-color: #EF4444;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px 5px 20px;
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -242,6 +243,7 @@ header {
     padding: 0px 20px 5px 20px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 .download-button-windows:hover {
     background-color: #992727;
